--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -21,6 +21,8 @@
     \textbf{SN} - Sensor Network (Rede de Sensores)
     \newline
     \textbf{M2M} - Machine To Machine
+    \newline
+    \textbf{EEPROM} - Electrical Erasable Programmable Read Only Memory. 
     
     \setcounter{page}{1}
     \thispagestyle{plain}
