--- a/ref.bib
+++ b/ref.bib
@@ -838,3 +838,18 @@ Internet of things CISCO
   author={Recio {\'A}lvaro, Marta},
   year={2020}
 }
+
+@article{nationalInstrument,
+  author          = {National Instruments},
+  journal         = {Austin, Texas, USA: National Instruments Editorial},
+  title           = {Data Acquisition (DAQ) Fundamentals Application Note 007},
+  volume          = {7},
+  year            = {1999}
+}
+
+@article{caracteristicassensores,
+  author          = {M. A. García y cols.},
+  journal         = {Madrid: Thomson Editores Spain},
+  title           = {Instrumentacion Electronica},
+  year            = {2004}
+}
