--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -477,4 +477,8 @@
     %Sensores PIR\\
 
     \addcontentsline{toc}{section}{Conclusiones}
-    \textbf{\Large Conclusiones}\newline
+    \textbf{\large Conclusiones parciales}
+
+    En este capítulo se ha hablado de la variedad de aplicaciones del Internet de las Cosas y de su relación con la conservación del patrimonio cultural. La descripción de las arquitecturas del IoT brindó la posibilidad de proponer la arquitectura del sistema que se desea implementar. Como parte del análisis de este sistema se explicó el concepto de sensor, de aquí se concluye que estos serán la unidad básica de adquisición de la información para nuestra arquitectura.
+    Se explicó el concepto de microcontrolador, fundamentando que se selecciona ESP-12F sobre las demás plataformas por las características expuestas durante el desarrollo. 
+    Se establecieron valores mínimos y máximos a modo de evitar la aparición del especies xilófagas en la colección objeto de estudio.
