--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -35,9 +35,9 @@ Ahora, ¿por qué no se tomó ninguno de estos?
     \label{imag:esquematico_nodo}
 \end{figure}
 
-A continuación, se describen por partes los elementos que componen dichos nodos.
+A continuación, se describen por partes los elementos que componen dichos nodos. \\
 
-    %Dentro de la familia de los ESP se encuentra el NodeMCU. Este microcontrolador (Imagen \ref{imag:nodemcu}) será el encargado de recibir los datos de los sensores y organizarlos en función de su continua transmisión hacia el concentrador.\\
+%Dentro de la familia de los ESP se encuentra el NodeMCU. Este microcontrolador (Imagen \ref{imag:nodemcu}) será el encargado de recibir los datos de los sensores y organizarlos en función de su continua transmisión hacia el concentrador.\\
 
     %\begin{figure}[h]
     %    \centering
