--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -439,6 +439,7 @@
         \label{tab:variables_microclimaticas}
         \begin{tabular}{|l|l|c|l|}
         \hline
+        \rowcolor[HTML]{9698ED}
         Variables   & Valores Recomendados & Materiales                                   & Autores                                                                                                                                                                                                                                                        \\ \hline
         Temperatura & 18 - 25°C            & \multirow{3}{*}{Vidrio y Cerámicos}          & \multirow{3}{*}{\begin{tabular}[c]{@{}l@{}}\cite{buysConservationRestorationCeramics2014}\\ \cite{garciaherasInnovationGestionConservacion2015}\\ \cite{koobConservationRestorationGlass2004}\end{tabular}}                                                    \\ \cline{1-2}
         Humedad     & 40 - 65\%            &                                              &                                                                                                                                                                                                                                                                \\ \cline{1-2}
