--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -450,8 +450,8 @@
         \end{tabular}
     \end{table}
 
-    Estos valores son definidos específicamente por el tipo de clima del país, y Cuba por ser un país cálido y húmedo en algunas regiones como es la ciudad de Santiago de Cuba donde se encuentra la colección objeto de estudio de este trabajo, 
-    es importante realizar una valoración de los valores adecuados de estas variables ambientales por parte de los especialistas que puedan ser defiidos en la propuesta y permitan mantener la colección en buen estado de conservación.
+    Estos valores son definidos específicamente por el tipo de clima del país, y Cuba por ser un país cálido y húmedo en algunas regiones como es la ciudad de Santiago de Cuba donde se encuentra la colección objeto de estudio de este trabajo,
+    es importante realizar una valoración de los valores adecuados de estas variables ambientales por parte de los especialistas que puedan ser definidos en la propuesta y permitan mantener la colección en buen estado de conservación.
     Vale destacar que los especialistas del Centro Prat Puig han manifestado que no tienen referencia que ninguna métrica o metodología por la cual se rigan para la toma de decisiones con respecto a las variables ambientales recomendadas para la conservación de los bienes culturales de la colección.
 
     \section{Condiciones que favorecen el ataque de insectos xilófagos}
