--- a/caratula.tex
+++ b/caratula.tex
@@ -1,6 +1,6 @@
 \pagestyle{empty}
 
-% \marginsize{0.1mm}{0.1mm}{0.1mm}{0.1mm}| 
+% \marginsize{0.1mm}{0.1mm}{0.1mm}{0.1mm}
 
 % \begin{figure}[ht!]
 %     \begin{flushleft}
