--- a/capitulos/abstract.tex
+++ b/capitulos/abstract.tex
@@ -3,7 +3,7 @@
 \thispagestyle{plain}
 
 \addcontentsline{toc}{section}{Abstract}
-    \textbf{\textit{\Large Abstract}}
+    \textbf{\textit{\LARGE Abstract}}
     \newline
 
     \textit{This Diploma Work deals with the design and installation process of a monitoring and visualization system of the variables for the control of the state of conservation of the pieces belonging to the Prat Puig sample located in the Office of the Historian of the province of Santiago de Cuba. Generalities about the application of the IoT in museums at an international level and in Cuba are discussed. A characterization of the sensors to be used for control is carried out, as well as the assembly of a security system.\\
