--- a/capitulos/resumen.tex
+++ b/capitulos/resumen.tex
@@ -3,7 +3,7 @@
 \thispagestyle{plain}
 
 \addcontentsline{toc}{section}{Resumen}
-    \textbf{\Large Resumen}
+    \textbf{\LARGE Resumen}
 \newline
 
 El presente Trabajo de Diploma trata el proceso de diseño e instalación de un sistema de monitoreo y visualización de las variables para el control del estado de conservación de las piezas pertenecientes a la Colección de Arte y Arqueología de Francisco Prat Puig ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba. Se tratan generalidades sobre la aplicación del Iot en museos a nivel internacional y en Cuba. Se realiza una caracterización de los sensores a emplear para el control, así como el montaje de un sistema de seguridad.
