--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -27,44 +27,41 @@
 
     Resumiendo en la siguiente tabla los sensores a emplear según la variable a medir.
 
-\begin{table}[H]
-    \centering
-    \caption{Relación sensores}
-    \subcaption*{Fuente: Elaboración propia}
-    \begin{tabular}{|c|c|c|cccc|}
-    \hline
-    \rowcolor[HTML]{9698ED} 
-    \cellcolor[HTML]{9698ED}                      & \cellcolor[HTML]{9698ED}                                        & \cellcolor[HTML]{9698ED}                         & \multicolumn{4}{c|}{\cellcolor[HTML]{9698ED}Características}                                                                                                                                                                                                                          \\ \cline{4-7} 
-    \rowcolor[HTML]{9698ED} 
-    \multirow{-2}{*}{\cellcolor[HTML]{9698ED}No.} & \multirow{-2}{*}{\cellcolor[HTML]{9698ED}Variable}              & \multirow{-2}{*}{\cellcolor[HTML]{9698ED}Nombre} & \multicolumn{1}{c|}{\cellcolor[HTML]{9698ED}Rango}                                           & \multicolumn{1}{c|}{\cellcolor[HTML]{9698ED}Precisión} & \multicolumn{1}{c|}{\cellcolor[HTML]{9698ED}\begin{tabular}[c]{@{}c@{}}Voltaje\\ alimentación\end{tabular}} & Corriente       \\ \hline
-    1                                             & \begin{tabular}[c]{@{}c@{}}Temperatura y\\ Humedad\end{tabular} & DHT22                                            & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}De - 40 a 80°C y\\ De 0 a 100RH\end{tabular}} & \multicolumn{1}{c|}{5\%}                               & \multicolumn{1}{c|}{De 3v a 6v}                                                                             & 2.5mA           \\ \hline
-    2                                             & CO2                                                             & MH-Z19C                                          & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}De 400ppm a\\ 5000ppm\end{tabular}}           & \multicolumn{1}{c|}{5\%}                               & \multicolumn{1}{c|}{5v}                                                                                     & \textless{}40mA \\ \hline
-    3                                             & Vibración                                                       & M0168                                            & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Salida analógica\\ (0-1024)\end{tabular}}     & \multicolumn{1}{c|}{2\%}                               & \multicolumn{1}{c|}{De 3.3v a 5v}                                                                           & \textless{}10mA \\ \hline
-    4                                             & Polución                                                        & SDS011                                           & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}De 0.0 a\\ 999.9ugm3\end{tabular}}            & \multicolumn{1}{c|}{10\%}                              & \multicolumn{1}{c|}{5v}                                                                                     & 100mA           \\ \hline
-                                                  &                                                                 & LDR                                              & \multicolumn{1}{c|}{}                                                                        & \multicolumn{1}{c|}{}                                  & \multicolumn{1}{c|}{5v}                                                                                     & 10mA            \\ \cline{3-7} 
-    \multirow{-2}{*}{5}                           & \multirow{-2}{*}{Luz}                                           & BH1750                                           & \multicolumn{1}{c|}{De 1 a 65535 lx}                                                         & \multicolumn{1}{c|}{20\%}                              & \multicolumn{1}{c|}{De 2.4v a 3.6v}                                                                         & 0.12mA          \\ \hline
-    \end{tabular}
-    \label{tab:relacion_sensores}
-\end{table}
+    \begin{table}[H]
+        \centering
+        \caption{Relación sensores}
+        \label{tab:relacion_sensores}
+        \begin{tabular}{|l|l|l|}
+        \hline
+        \cellcolor[HTML]{9698ED}                      & \cellcolor[HTML]{9698ED}                           & \cellcolor[HTML]{9698ED}                         \\
+        \multirow{-2}{*}{\cellcolor[HTML]{9698ED}No.} & \multirow{-2}{*}{\cellcolor[HTML]{9698ED}Variable} & \multirow{-2}{*}{\cellcolor[HTML]{9698ED}Sensor} \\ \hline
+        1                                             & Temperatura                                        & DHT22                                            \\ \hline
+        2                                             & Humedad                                            & DHT22                                            \\ \hline
+        3                                             & CO2                                                & SGP30                                            \\ \hline
+        4                                             & Vibración                                          & TZT-LM393                                        \\ \hline
+        5                                             & Calidad de Aire                                    & ZP07-MP503                                       \\ \hline
+        6                                             & Intensidad luminosa                                & BH1750                                           \\ \hline
+        \end{tabular}
+    \end{table}
 
-Se tomaron precios de referencia de los sensores de las páginas oficiales de compras online Amazon y Aliexpress para tener una idea del coste de montaje de los nodos.\\
+% Se tomaron precios de referencia de los sensores de las páginas oficiales de compras online Amazon y Aliexpress para tener una idea del coste de montaje de los nodos.\\
 
-\begin{table}[H]
-    \centering
-    \caption{Relación precios de referencia}
-    \subcaption*{Fuente: Elavoración propia}
-    \begin{tabular}{|c|c|c|}
-    \hline
-    \textbf{Sensor} & \textbf{Precio Amazon (U)} & \textbf{Precio Aliexpress (U)} \\ \hline
-    DHT22           & 13.69 – 16.99 \$           & 2 – 4 \$                       \\ \hline
-    MH-Z19C         & -                          & 16.99 \$                       \\ \hline
-    M0168           & -                          & 0.31 – 1.34 \$                 \\ \hline
-    SDS011          & 14.62 \$                   & 17.64 \$                       \\ \hline
-    LDR             & 14.50 \$                   & 0.82 \$                        \\ \hline
-    BH1750          & -                          & 8.46 \$                        \\ \hline
-    \end{tabular}
-    \label{tab: precios_referencia}
-\end{table}
+% \begin{table}[H]
+%     \centering
+%     \caption{Relación precios de referencia}
+%     \subcaption*{Fuente: Elavoración propia}
+%     \begin{tabular}{|c|c|c|}
+%     \hline
+%     \textbf{Sensor} & \textbf{Precio Amazon (U)} & \textbf{Precio Aliexpress (U)} \\ \hline
+%     DHT22           & 13.69 – 16.99 \$           & 2 – 4 \$                       \\ \hline
+%     MH-Z19C         & -                          & 16.99 \$                       \\ \hline
+%     M0168           & -                          & 0.31 – 1.34 \$                 \\ \hline
+%     SDS011          & 14.62 \$                   & 17.64 \$                       \\ \hline
+%     LDR             & 14.50 \$                   & 0.82 \$                        \\ \hline
+%     BH1750          & -                          & 8.46 \$                        \\ \hline
+%     \end{tabular}
+%     \label{tab: precios_referencia}
+% \end{table}
 
 \subsection{Sensor de temperatura DHT22}
 
