--- a/ref.bib
+++ b/ref.bib
@@ -853,3 +853,26 @@ Internet of things CISCO
   title           = {Instrumentacion Electronica},
   year            = {2004}
 }
+
+@book{calvomanuelConservacionRestauracionPintura2002,
+	title = {Conservación y restauración de pintura sobre lienzo},
+	author = {Calvo Manuel, Ana Maria},
+	year = {2002}
+}
+
+@article{tapolComoAfrontarPolucion2001,
+	title = {Cómo afrontar la polución en los museos. {Algunas} pistas y precisiones sobre las investigaciones en curso},
+	journal = {Butlletí del Museu Nacional d'Art de Catalunya, 2001, vol. 5, pp. 183-190},
+	author = {Tapol, Benoît de},
+	year = {2001},
+	note = {Publisher: Museu Nacional d'Art de Catalunya}
+}
+
+@inproceedings{weiDesignVibrationDamping2011,
+	title = {Design of a vibration damping system for sculpture pedestals: an integral object-based approach},
+	shorttitle = {Design of a vibration damping system for sculpture pedestals},
+	booktitle = {{ICOM}-{CC} 16th {Triennial} {Meeting} {Lisbon} {Preprints}},
+	publisher = {ICOM Paris},
+	author = {Wei, William and Krumperman, Netta and Delissen, Nicole},
+	year = {2011}
+}
