--- a/ref.bib
+++ b/ref.bib
@@ -381,7 +381,7 @@ Internet of things CISCO
 
 @article{vazquez1999avetianella,
   title={Avetianella longoi Siscaro, par{\'a}sito de huevos de Phoracantha semipunctata F.: Primera cita de su presencia en Espa{\~n}a y bases para la puesta en pr{\'a}ctica del control biol{\'o}gico del xil{\'o}fago},
-  author={V{\'A}ZQUEZ, P MANSILLA and OTERO, R P{\'E}REZ and FERN{\'A}NDEZ, F RUIZ and CORRAL, C SALINERO},
+  author={V{\'a}zquez, P. M. and Otero, R. P{\'e}rez and Fer{\'a}ndez, F. Ruiz and Corral, C. Salinero},
   journal={Bolet{\'\i}n de sanidad vegetal. Plagas},
   volume={25},
   number={4},
