--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -431,6 +431,8 @@
 
     En la bibliografía consultada se utiliza el concepto de conservación preventiva, la cual la define Bachman \cite{bachmann1992conservation} como un pilar básico de la gestión museológica y de la cual de ella depende el mantenimiento de las colecciones de forma adecuada, viable y sostenible en el tiempo, además de que permite la durabilidad de los elementos patrimoniales y reduce las intervenciones de los especialistas tal como lo comenta Merrit y cols. \cite{merrittPreventiveConservationHistoric2010}. Las condiciones microclimáticas más importantes a tener en cuanta según Thomson \cite{thomsonMuseumEnvironment2018} y Márquez \cite{marquezAgentesDeterioroMedioambientales2016} son la temperatura, la humedad relativa, la iluminación, las vibraciones, el CO2, la polución y el biodeterioro.
 
+    La temperatura será tomada en grados Celcios (°C), la humedad en \%, el CO2 será analisado en ppm (partículas por millón), la iluminación en Luxers (Lx), la polución en micro-gramos por metros cúbicos (ug/m3) y las vibraciones en dB.
+
     Estos valores deben encontrarse en rangos determinados como se muestra en la siguiente tabla \ref{tab:variables_microclimaticas} según los autores Buys \& cols., Heras \& cols., Koob \& cols., Álvaro y Márquez.
     
     \begin{table}[h]
